CMAKE_MINIMUM_REQUIRED(VERSION 1.0)

# ------------------------------------------------
# ------------------- algolib --------------------

ADD_SUBDIRECTORY( src )
# ------------------------------------------------


# ------------------------------------------------
# ------------------- tests ----------------------

ADD_SUBDIRECTORY( tests/LinkedListTest )
#ADD_SUBDIRECTORY( ${TEST_ALGO_DIR}/ )
# ------------------------------------------------

